--- a/loginadmin.html
+++ b/loginadmin.html
@@ -9,7 +9,7 @@
 <body>
     <div class="login-box">
         <h2>LOGIN ADMIN</h2>
-        <form action="praktikum3.html" method="get">
+        <form action="praktikum3tp2.html" method="get">
             <input type="text" name="username" placeholder="Masukkan Username" required><br> 
             <input type="password" name="password" placeholder="Masukkan Password" required><br>
             <button type="submit">Login</button>
@@ -17,4 +17,5 @@
         <a href="login.html">Login User</a>
     </div>
 </body>
+
 </html>
